--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta cahrset="utf-8">
-  <meta name="viewport" content="width=devide-width, intitial-scale=1">
+  <meta name="viewport" content="width=device-width, intitial-scale=1">
 	<title>Menu Items</title>
   <link rel="stylesheet" type="text/css" href="CSS/mod2-sol.css">
 
