--- a/SPA-Ajs-1/index.html
+++ b/SPA-Ajs-1/index.html
@@ -11,13 +11,15 @@
   <body>
 
 <div ng-controller="LunchCheckController">
-	Lunch Menu Items : <input type="text" ng-model="name">
-  <button ng-click="check_if_too();" ng-model="name">CheckIFTooMuch!!</button>
-
+	List comma separated dishes you usually have for lunch :
+   <input type="text" ng-model="name">
+   <div>
+  <button ng-click="check_if_too();" ng-model="name">Check IF TooMuch!!</button>
+</div>
 <br>
-
+<div>
   {{msg}}
-
+</div>
 
 </div>
   </body>
