--- a/SPA-Ajs-1/index.html
+++ b/SPA-Ajs-1/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html ng-app="LunchCheck">
   <head>
-    <meta charset="utf-8">
-		<script src="angular.min.js"></script>
+    <title>Lunch Checker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style>
+      .message { font-size: 1.3em; font-weight: bold; }
+    </style>
+    <script src="angular.min.js"></script>
+
     <script src="app.js"></script>
 
-    <style>body { font-size: 1.5em; }</style>
-    <title>Angular JS Module 1 Solution</title>
+
   </head>
   <body>
 
 <div ng-controller="LunchCheckController">
-	List comma separated dishes you usually have for lunch :
-   <input type="text" ng-model="name">
+	<h1>Lunch Checker</h1>
+   <input type="text" placeholder="list comma separated dishes you usually have for lunch"
+    ng-model="name">
    <div>
   <button ng-click="check_if_too();" ng-model="name">Check IF TooMuch!!</button>
 </div>
